minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-external
  namespace: minio
spec:
  type: ExternalName
  externalName: 192.168.98.150
  ports:
    - port: 9000
      targetPort: 9000

apiVersion: v1
kind: Service
metadata:
  name: cs-minio-external
  namespace: minio
spec:
  type: ExternalName
  externalName: 192.168.98.150
  ports:
    - port: 9001
      targetPort: 9001
